# rocqd

./: Cargo.toml  README.md  architecture.md  design.md  notes.md  rocq-cache-daemon-design.md  vsrocq-protocol.md
src/: client.rs  daemon.rs  lib.rs  main.rs  protocol.rs  session.rs
src/lsp/: jsonrpc.rs  mod.rs  transport.rs  vsrocq.rs
tests/: integration_test.rs  vsrocq_direct_test.rs
tests/fixtures/: error.v  query.v  simple.v
