[package]
name = "rocqd"
version = "0.1.0"
edition = "2021"
description = "A caching daemon for Rocq compilation"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lsp-types = "0.97"
dirs = "6"
sha2 = "0.10"
url = "2"
libc = "0.2"
